<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.calllog.fragment.list.ListFragment"
        android:label="@string/phone"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_callFragment"
            app:destination="@id/callFragment" />
    </fragment>
    <fragment
        android:id="@+id/callFragment"
        android:name="com.example.calllog.fragment.call.CallFragment"
        android:label="@string/call"
        tools:layout="@layout/fragment_call" >
        <action
            android:id="@+id/action_callFragment_to_callingFragment"
            app:destination="@id/callingFragment" />
    </fragment>
    <fragment
        android:id="@+id/callingFragment"
        android:name="com.example.calllog.fragment.calling.CallingFragment"
        android:label="@string/calling"
        tools:layout="@layout/fragment_calling" >
        <argument
            android:name="dialnumber"
            app:argType="string" />
    </fragment>
</navigation>