<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".fragment.calling.CallingFragment">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/dialed_number"
        android:gravity="center"
        android:id="@+id/tv_Dialed_number"
        android:textSize="50sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_timer"
        android:layout_gravity="center"
        android:text="@string/timer"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="200dp"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_add_call"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/add_call"
            android:src="@drawable/ic_baseline_add_24"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/add_call" >
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_video_call_calling"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/video_call"
            android:src="@drawable/ic_baseline_video_call_24"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/video_call" >
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_Bluetooth"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/bluetooth"
            android:src="@drawable/ic_baseline_bluetooth_24"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/bluetooth" >
        </TextView>

    </LinearLayout>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_speaker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/speaker"
            android:src="@drawable/ic_baseline_speaker_phone_24"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/speaker" >
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_mute"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/mute"
            android:src="@drawable/ic_baseline_mic_off_24"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/mute" >
        </TextView>
    </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_keypad_calling"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/keypad"
                android:src="@drawable/ic_baseline_dialpad_24"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/keypad" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="25dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/call_end_floating_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:contentDescription="@string/call"

            android:src="@drawable/ic_baseline_call_end_24"
            app:backgroundTint="#D80F00"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>